--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@
             <version>1.4.5.RELEASE</version>
         </dependency>
 
+        <!--Jsoup-->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.2</version>
+        </dependency>
 
     </dependencies>
 
